moved code into js file

--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,7 @@
   </p>
 
   <script>
-    const button = document.querySelector('.alert');
-    button.addEventListener('click', () => {
-      alert(__dirname);
-    });    
+    require('./renderer');    
   </script>
 </body>
 </html>
