--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Bookmarker</title>
 </head>
-<body>
-  <h1>Hello from Electron</h1>
-
-  <p>
-    <button class="alert">Current Directory</button>
-  </p>
+<body> 
+  <form>
+    <h1>
+      Mi nuevo form
+    </h1>
+    <input type="text" id="#txtName" />
+    <input type="submit" value="Guardar" />
+  </form>
 
   <script>
     require('./renderer');    
