--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->    
+    -->
 
     <div class="container-fluid">
       <div class="row">
@@ -45,8 +45,8 @@
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link active" href="#">
-                  <i class="fas fa-chart-pie"></i>
-                  Ventas <span class="sr-only">(current)</span>
+                  <i class="fas fa-pencil-alt"></i>
+                  Libro Diario <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
@@ -84,7 +84,7 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <h2>Ventas del Mes</h2>
+          <h2>Libro Diario</h2>
 
           <div id="root"></div>
 
