--- a/public/index.html
+++ b/public/index.html
@@ -38,60 +38,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  <i class="fas fa-pencil-alt"></i>
-                  Libro Diario <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="far fa-file-alt"></i>
-                  Presupuestos
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-shopping-cart"></i>
-                  Productos
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-users"></i>
-                  Clientes
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-dolly"></i>
-                  Proveedores
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-clipboard-list"></i>
-                  Inventario
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <div class="container-fluid" id="root">
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <h2>Libro Diario</h2>
-
-          <div id="root"></div>
-
-        </main>
-      </div>
     </div>
+
+
     <script src="bootstrap/jquery/jquery.min.js"></script>
+    <script src="bootstrap/tooltip/tooltip.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script>
+      require('./renderer');
+    </script>
   </body>
 </html>
