--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,8 @@
     </div>
 
 
-    <script src="bootstrap/jquery/jquery.min.js"></script>
-    <script src="bootstrap/tooltip/tooltip.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script>
-      require('./renderer');
-    </script>
+    <script src="jquery/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="renderer.js"></script>    
   </body>
 </html>
